--- a/style.css
+++ b/style.css
@@ -14,9 +14,10 @@ body {
 }
 
 .phone {
+  position: relative;
   width: 400px;
   height: 720px;
-  background-color: #ecf0f1;
+  background-color: #FFF;
   border-radius: 20px;
   overflow: hidden;
 }
@@ -50,7 +51,7 @@ button {
   margin-bottom: 4rem;
   font-size: 1.4rem;
   color: #FFF;
-  background-color: #636e72;
+  background-color: #9c9e9f;
   z-index: 10;
 } 
 
@@ -66,7 +67,7 @@ button {
 
 .header-profile {
   position: absolute;
-  top: 16%;
+  top: 12%;
   margin-left: 2rem;
   width: 80px;
   height: 80px;
@@ -77,7 +78,8 @@ button {
 
 .main {
   position: relative;
-  margin: 0 1rem;
+  width: 100%;
+  padding: 0 1rem;
 }
 
 .title {
@@ -103,6 +105,7 @@ button {
   position: absolute;
   top: -18%;
   right: 0;
+  margin-right: 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -113,6 +116,7 @@ button {
 .follow-message {
   border: .1px solid #b2bec3;
   margin-left: 10px;
+  background: none;
 }
 
 .follow-btn {
@@ -181,4 +185,68 @@ button {
 
 .followers-box p:nth-child(2) {
   margin-left: 1rem;
+}
+
+.notification-box {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 25rem;
+  background-color: #FFF;
+  box-shadow: 1px 0px 6px 1px #b2bec3;
+  border-radius: 30px 30px 0px 0px;
+  padding: 2rem;
+  z-index: 30;
+
+  display: none;
+}
+
+.show {
+  display: block;
+  animation: showNotif .4s ease-in-out;
+}
+
+/* Anim */
+@keyframes showNotif {
+  from {
+    transform: translateY(70%);
+  } to {
+    transform: translateY(0%);
+  }
+}
+
+.notification-header {
+  margin-bottom: 2rem;
+}
+
+.notification-header h2 {
+  font-size: 1.8rem;
+  width: 70%;
+}
+
+.notification-header p {
+  color: #636e72;
+}
+
+.notif {
+  display: grid;
+  grid-template-columns: 7fr 1fr;
+  align-items: center;
+  margin-bottom: .800rem;
+}
+
+.notif p {
+  color: #9b9fa0;
+  font-size: .900rem;
+}
+
+.notif i {
+  font-size: 1.8rem;
+  cursor: pointer;
+  color: #2d3436;
+  margin-left: 2rem;
+}
+
+.active {
+  color: #2ed573 !important;
 }
